# CUtils

./: .clang-format  .gitignore  CArray.h  CFilesystem.h  CLog.h  CMakeLists.txt  CMemory.h  CStringView.h  DArray.h  DString.h  LICENSE  README.md  STDTypes.h  main.c
benchmark/: CMakeLists.txt  benchmark.hpp  cutil_benchmark.cpp  timer.hpp
examples/: CMakeLists.txt  darr_example.c  utf8_str_example.c
include/: CFilesystem.h  CLog.h  CMemory.h  CStringView.h  DArray.h  DString.h  STDTypes.h
tests/: CMakeLists.txt  darr_tests.hpp  dstr_tests.hpp  mainTest.c  mainTest.cpp
